# datasets

./: .dockerignore  .gitignore  Dockerfile  Makefile  NOTICE  README.md  VERSION  build_catalog.py  catalog.yml  cli.py  pyproject.toml  requirements.txt  upload.sh
.github/workflows/: biweekly.yml  build-docker.yml  build.yml  catalog.yml  daily.yml  de_lobbyregister.yml  monthly.yml
catalogs/: index.yml  opensanctions.yml  reference-dach.yml
common/: catalog.py
datasets/: catalog.yml
datasets/DE/de_aa/: config.yml
datasets/DE/de_abgeordnetenwatch_full/: config.yml  extract.py  transform.py
datasets/DE/de_abgeordnetenwatch_lobbymeetings/: config.yml  mapping.yml
datasets/DE/de_abgeordnetenwatch_sidejobs/: config.yml  extract.py  transform.py
datasets/DE/de_bb_mdj/: config.yml
datasets/DE/de_bb_mik/: config.yml
datasets/DE/de_bb_mil/: config.yml
datasets/DE/de_bb_msgiv/: config.yml
datasets/DE/de_bgh/: __init__.py
datasets/DE/de_bmbf/: config.yml
datasets/DE/de_bmdv/: config.yml
datasets/DE/de_bmel/: config.yml
datasets/DE/de_bmf/: config.yml
datasets/DE/de_bmi/: config.yml
datasets/DE/de_bmu/: config.yml
datasets/DE/de_bmvg/: config.yml
datasets/DE/de_bmz/: config.yml
datasets/DE/de_bw_fm/: config.yml
datasets/DE/de_bw_im/: config.yml
datasets/DE/de_bw_jum/: config.yml
datasets/DE/de_bw_km/: config.yml
datasets/DE/de_bw_mlw/: config.yml
datasets/DE/de_bw_um/: config.yml
datasets/DE/de_bw_wm/: config.yml
datasets/DE/de_by_stmb/: config.yml
datasets/DE/de_by_stmelf/: config.yml
datasets/DE/de_by_stmj/: config.yml
datasets/DE/de_by_stmuk/: config.yml
datasets/DE/de_by_stmuv/: config.yml
datasets/DE/de_by_stmwi/: config.yml
datasets/DE/de_by_stmwk/: config.yml
datasets/DE/de_fds_collections/: __init__.py  config.yml
datasets/DE/de_fds_klimastiftung/: config.yml
datasets/DE/de_fragdenstaat/: __init__.py
datasets/DE/de_gnd/: README.md  config.yml  extract.py  sru.py  standard_vocab.py  transform.py
datasets/DE/de_hb_bildung/: config.yml
datasets/DE/de_hb_finanzen/: config.yml
datasets/DE/de_hb_gesundheit/: config.yml
datasets/DE/de_hb_kultur/: config.yml
datasets/DE/de_hb_swh/: config.yml
datasets/DE/de_hb_umwelt/: config.yml
datasets/DE/de_hb_wah/: config.yml
datasets/DE/de_he_digitales/: config.yml
datasets/DE/de_he_hmdf/: config.yml
datasets/DE/de_he_hmdis/: config.yml
datasets/DE/de_he_hmfg/: config.yml
datasets/DE/de_he_hmwk/: config.yml
datasets/DE/de_he_umwelt/: config.yml
datasets/DE/de_he_wirtschaft/: config.yml
datasets/DE/de_lobbypedia_parteispenden/: extract.py
datasets/DE/de_lobbyregister/: config.yml  metadata.yml  parse.py  transform.py
datasets/de_abgeordnetenwatch/: Makefile  extract.py  metadata.yml  parse.py
datasets/de_bgh/: __init__.py  config.yml
datasets/de_lobbyregister/: Makefile  config.yml  parse.py  transform.py
datasets/usrtk_monsanto_papers/: config.yml
de_abgeordnetenwatch/: transform.py
de_abgeordnetenwatch_full/: extract.py  transform.py
de_abgeordnetenwatch_lobbymeetings/: config.yml  transform.py
de_abgeordnetenwatch_sidejobs/: config.yml  extract.py  parse.py  transform.py
de_gnd/: README.md  config.yml  extract.py  sru.py  standard_vocab.py  transform.py
de_gov_scrapers/: build.py  documents.yml.j2  get_departments.py
de_lobbypedia_parteispenden/: config.yml  extract.py  transform.py
util/cordis/: extract.py  transform.py
utils/: __init__.py  cache.py  catalog.py  operations.py
(+132 files in other folders)
